Game is scaled correctly

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,6 +8,13 @@
         body {
             margin: 0;
         }
+
+        /* Scale the canvas and pixelate it */
+        canvas {
+            image-rendering: pixelated;
+            image-rendering: crisp-edges;
+            width: 768px; /* 256px * 3 = 768px */
+        }
     </style>
 </head>
 <body>
