--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do Not Spread It</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <style>
         body {
             margin: 0;
@@ -18,5 +19,13 @@
     </style>
 </head>
 <body>
+    <script>
+        WebFont.load({
+            custom: {
+                families: ['Pixeled'],
+                urls: ['assets/Pixeled.css']
+            }
+        });
+    </script>
 </body>
 </html>
